[gd_scene load_steps=2 format=3 uid="uid://c1y3brr5jn2h4"]

[ext_resource type="Script" path="res://Windows/Main Windows/Scripts/ReleaseNewsTab.gd" id="1_2r7x8"]

[node name="ReleaseNewsTab" type="Panel"]
custom_minimum_size = Vector2(100, 100)
offset_right = 200.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Release Description .... a jrufherhyhreygyuhryhfyrehyfhyerhfyrheyfhyrhfyhryhfyhyhy"
script = ExtResource("1_2r7x8")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Release Description .... a jrufherhyhreygyuhryhfyrehyfhyerhfyrheyfhyrhfyhryhfyhyhy"

[node name="VBoxContainer" type="VBoxContainer" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Button/VBoxContainer"]
layout_mode = 2
text = "Release Name"

[node name="HSeparator" type="HSeparator" parent="Button/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Button/VBoxContainer"]
layout_mode = 2
tooltip_text = "Release Description .... a jrufherhyhreygyuhryhfyrehyfhyerhfyrheyfhyrhfyhryhfyhyhy"
theme_override_font_sizes/font_size = 8
text = "Release Description .... a jrufherhyhreygyuhryhfyrehyfhyerhfyrheyfhyrhfyhryhfyhyhy"
text_overrun_behavior = 3

[node name="Label3" type="Label" parent="Button/VBoxContainer"]
layout_mode = 2
text = "Release Ver"
horizontal_alignment = 2

[node name="Label4" type="Label" parent="Button/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Release Date"
horizontal_alignment = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
